--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.5",
+    "rsocial": "file:..",
     "tailwindcss": "^4.0.5",
     "zustand": "^5.0.3"
   },
